@@ -9,6 +9,8 @@ Changes
 * Added support for the Name component type ImplicitSha256Digest, and methods:
   Name.Component.fromImplicitSha256Digest, isGeneric and isImplicitSha256Digest.
   Name.appendImplicitSha256Digest.
+* https://redmine.named-data.net/issues/3447 In Data, added getFullName, and
+  in Interest added matchesData to use it.
 * Examples: In test_encode_decode_fib_entry, etc, use ProtobufTlv.toName.
 * Unit tests: In test_name_methods, added test_implicit_sha256_digest.
 * Unit tests: In test_interest_methods, added test_matches_data.
